# RealityGuide

./: LICENSE  README.md
Assets/: witVoice.asset
Assets/Oculus/: OculusProjectConfig.asset
Assets/PassthroughCameraApiSamples/MultiObjectDetection/SentisInference/Scripts/: SentisInferenceRunManager.cs
Assets/PassthroughCameraApiSamples/ZeroShot/: ZeroShot.unity
Assets/PassthroughCameraApiSamples/ZeroShot/Prefabs/: GeminiToWorldCameraCanvas.prefab
Assets/PassthroughCameraApiSamples/ZeroShot/Scripts/: CameraToGemini.cs  CustomJson.cs  XRImage.cs  ZeroShotCameraManager.cs
Assets/Plugins/Android/: AndroidManifest.xml
Assets/XR/Settings/: OpenXR Package Settings.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
passthroughcamera_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
py/: .gitignore  AGENTS.md  README.md  api_client.py  check_completion.py  main.py  pyproject.toml  server.py  shared.py  workflow.py
