[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "google-genai>=1.50.1",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.33.0",
    "ruff>=0.14.5",
]
